--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -26,7 +26,7 @@
         <td>{{ item.total_price }}</td>
         <td>{{item.firstname}} {{item.lastname}}</td>
         <td>{{item.phonenumber}}</td>
-        <td>{{item.adress}}</td>
+        <td>{{item.address}}</td>
       </tr>
     {% endfor %}
    </table>
