Added restaurant availability check

--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -21,6 +21,7 @@
       <th>Телефон</th>
       <th>Адрес доставки</th>
       <th>Комментарий</th>
+      <th>Список ресторанов</th>
       <th>Ссылка на админку</th>
     </tr>
 
@@ -34,6 +35,24 @@
         <td>{{item.phonenumber}}</td>
         <td>{{item.address}}</td>
         <td>{{item.comment}}</td>
+         <td>
+           <details>
+             <summary>Открыть</summary>
+             <br>
+             {% if item.restaurateur %}
+               <li>Готовится в {{ item.restaurateur }}</li>
+             {% else %}
+             {% for restaurants in available_restaurants %}
+               {% if item == restaurants.0 %}
+                 {% for restaurant in restaurants.1 %}
+                   Может быть приготовлен в:
+                   <li>{{ restaurant.name }}</li>
+                 {% endfor %}
+               {% endif %}
+             {% endfor %}
+           {% endif %}
+         </details>
+       </td>
         <td><a href={% url "admin:foodcartapp_order_change" object_id=item.id %}?next={{ currentUrl }}>Редактировать</a></td>
       </tr>
     {% endfor %}
