--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -50,7 +50,7 @@
            {% endif %}
            </details>
          </td>
-        <td><a href={% url "admin:foodcartapp_order_change" object_id=item.id %}?next={{ currentUrl }}>Редактировать</a></td>
+        <td><a href={% url "admin:foodcartapp_order_change" object_id=item.id %}?next={{request.build_absolute_uri|urlencode}}>Редактировать</a></td>
       </tr>
     {% endfor %}
    </table>
